kubernetes/services/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: fashion-store
    type: svc
spec:
    selector:
      app: fashion-store
      tier: backend
    ports:
      - protocol: TCP
        port: 5000
        targetPort: 5000
