kubernetes/services/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  labels:
    app: fashion-store
    type: svc
spec:
  selector:
    app: fashion-store
    tier: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
