kubernetes/services/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: fashion-store
    type: svc
spec:
  type: NodePort
  selector:
    app: fashion-store
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30007
